Ajout de la fiche synthétique et analyse

--- a/notebooks/01_exploration.ipynb
+++ b/notebooks/01_exploration.ipynb
@@ -2,10 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d8cddd63",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 525461 entries, 0 to 525460\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column       Non-Null Count   Dtype         \n",
+      "---  ------       --------------   -----         \n",
+      " 0   Invoice      525461 non-null  object        \n",
+      " 1   StockCode    525461 non-null  object        \n",
+      " 2   Description  522533 non-null  object        \n",
+      " 3   Quantity     525461 non-null  int64         \n",
+      " 4   InvoiceDate  525461 non-null  datetime64[ns]\n",
+      " 5   Price        525461 non-null  float64       \n",
+      " 6   Customer ID  417534 non-null  float64       \n",
+      " 7   Country      525461 non-null  object        \n",
+      "dtypes: datetime64[ns](1), float64(2), int64(1), object(4)\n",
+      "memory usage: 32.1+ MB\n",
+      "===  FICHE SYNTHÉTIQUE ===\n",
+      "\n",
+      "Source : Online Retail II - UCI Machine Learning Repository\n",
+      "Période couverte : 2009-12-01 07:45:00 → 2010-12-09 20:01:00\n",
+      "Taille du Dataset : (525461, 8)\n",
+      "Volume total de lignes : 525,461\n",
+      "Colonnes : Invoice, StockCode, Description, Quantity, InvoiceDate, Price, Customer ID, Country\n",
+      "Pourcentage de valeurs manquantes (%) : Customer ID    20.539488\n",
+      "Description     0.557225\n",
+      "dtype: float64\n",
+      "Nombre de doublons exacts : 6865\n",
+      "Factures annulées : 10206 (1.94% du total)\n",
+      "Délai moyen entre deux transactions (secondes) : 61.42\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -14,7 +49,36 @@
     "import matplotlib.pyplot as plt\n",
     "import streamlit as st\n",
     "\n",
-    "df = pd.read_excel(\"../data/online_retail_II.xlsx\")\n"
+    "df = pd.read_excel(\"../data/online_retail_II.xlsx\")\n",
+    "\n",
+    "df.head(5)\n",
+    "df.info()\n",
+    "df.describe()\n",
+    "# --- Fiche synthétique ---\n",
+    "print(\"===  FICHE SYNTHÉTIQUE ===\\n\")\n",
+    "print(f\"Source : Online Retail II - UCI Machine Learning Repository\")\n",
+    "print(f\"Période couverte : {df['InvoiceDate'].min()} → {df['InvoiceDate'].max()}\")\n",
+    "print(f\"Taille du Dataset : {df.shape}\")\n",
+    "print(f\"Volume total de lignes : {len(df):,}\")\n",
+    "print(f\"Colonnes : {', '.join(df.columns)}\")\n",
+    "\n",
+    "#Pourcentage de valeurs manquantes par colonne\n",
+    "missing = df.isna().mean().sort_values(ascending=False) * 100\n",
+    "missing = missing[missing > 0]\n",
+    "print(f\"Pourcentage de valeurs manquantes (%) : {missing}\")\n",
+    "\n",
+    "# Nombre de doublons exacts\n",
+    "duplicates = df.duplicated().sum()\n",
+    "print(f\"Nombre de doublons exacts : {duplicates}\")\n",
+    "\n",
+    "#Nombre de factures annulées\n",
+    "canceled = df['Invoice'].astype(str).str.startswith('C', na=False).sum()\n",
+    "total = len(df)\n",
+    "print(f\"Factures annulées : {canceled} ({canceled/total:.2%} du total)\")\n",
+    "\n",
+    "# Délai moyen entre deux transactions\n",
+    "df['diff'] = df['InvoiceDate'].sort_values().diff().dt.total_seconds().dropna()\n",
+    "print(\"Délai moyen entre deux transactions (secondes) :\", round(df['diff'].mean(), 2))\n"
    ]
   }
  ],
