--- a/data/process.ipynb
+++ b/data/process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8401a2ac",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "d31d6faf",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "c69c093a",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
        "std      1697.464450  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "4dd61e26",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f4e69d9e",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,9 @@
    "source": [
     "We see that by deleteting lines with no Custome ID, we end up with no missing value at all, because the other missing values on Description column were also the lines with missing values on Customer ID.\n",
     "\n",
-    "Also, the dataset contains some rows with a Price of 0, which is werid because we can't classify this transaction as a sales nor as a return. It's probably an error or a free sample, and we have to delete these rows for our future marketing analysis."
+    "Also, the dataset contains some rows with a Price of 0, which is werid because we can't classify this transaction as a sales nor as a return. It's probably an error or a free sample, and we have to delete these rows for our future marketing analysis.\n",
+    "\n",
+    "We also add a colum \"IsReturn\" to identify which rows are concerned by a return action."
    ]
   },
   {
@@ -249,7 +251,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[df[\"Price\"] != 0] #Deleting rows where \"Price\" = 0"
+    "df = df[df[\"Price\"] != 0] #Deleting rows where \"Price\" = 0\n",
+    "\n",
+    "df['IsReturn'] = df['Invoice'].astype(str).str.startswith('C')"
    ]
   },
   {
@@ -263,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "id": "78f4167c",
    "metadata": {},
    "outputs": [
@@ -271,33 +275,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        Invoice StockCode                          Description  Quantity  \\\n",
-      "0        489434     85048  15CM CHRISTMAS GLASS BALL 20 LIGHTS        12   \n",
-      "1        489434    79323P                   PINK CHERRY LIGHTS        12   \n",
-      "2        489434    79323W                  WHITE CHERRY LIGHTS        12   \n",
-      "3        489434     22041         RECORD FRAME 7\" SINGLE SIZE         48   \n",
-      "4        489434     21232       STRAWBERRY CERAMIC TRINKET BOX        24   \n",
-      "...         ...       ...                                  ...       ...   \n",
-      "1067365  581587     22613          PACK OF 20 SPACEBOY NAPKINS        12   \n",
-      "1067366  581587     22899         CHILDREN'S APRON DOLLY GIRL          6   \n",
-      "1067367  581587     23254        CHILDRENS CUTLERY DOLLY GIRL          4   \n",
-      "1067368  581587     23255      CHILDRENS CUTLERY CIRCUS PARADE         4   \n",
-      "1067369  581587     22138        BAKING SET 9 PIECE RETROSPOT          3   \n",
+      "  Invoice StockCode                          Description  Quantity  \\\n",
+      "0  489434     85048  15CM CHRISTMAS GLASS BALL 20 LIGHTS        12   \n",
+      "1  489434    79323P                   PINK CHERRY LIGHTS        12   \n",
+      "2  489434    79323W                  WHITE CHERRY LIGHTS        12   \n",
+      "3  489434     22041         RECORD FRAME 7\" SINGLE SIZE         48   \n",
+      "4  489434     21232       STRAWBERRY CERAMIC TRINKET BOX        24   \n",
       "\n",
-      "                InvoiceDate  Price  Customer ID         Country  \n",
-      "0       2009-12-01 07:45:00   6.95      13085.0  United Kingdom  \n",
-      "1       2009-12-01 07:45:00   6.75      13085.0  United Kingdom  \n",
-      "2       2009-12-01 07:45:00   6.75      13085.0  United Kingdom  \n",
-      "3       2009-12-01 07:45:00   2.10      13085.0  United Kingdom  \n",
-      "4       2009-12-01 07:45:00   1.25      13085.0  United Kingdom  \n",
-      "...                     ...    ...          ...             ...  \n",
-      "1067365 2011-12-09 12:50:00   0.85      12680.0          France  \n",
-      "1067366 2011-12-09 12:50:00   2.10      12680.0          France  \n",
-      "1067367 2011-12-09 12:50:00   4.15      12680.0          France  \n",
-      "1067368 2011-12-09 12:50:00   4.15      12680.0          France  \n",
-      "1067369 2011-12-09 12:50:00   4.95      12680.0          France  \n",
-      "\n",
-      "[793985 rows x 8 columns]\n"
+      "          InvoiceDate  Price  Customer ID         Country  IsReturn  \n",
+      "0 2009-12-01 07:45:00   6.95      13085.0  United Kingdom     False  \n",
+      "1 2009-12-01 07:45:00   6.75      13085.0  United Kingdom     False  \n",
+      "2 2009-12-01 07:45:00   6.75      13085.0  United Kingdom     False  \n",
+      "3 2009-12-01 07:45:00   2.10      13085.0  United Kingdom     False  \n",
+      "4 2009-12-01 07:45:00   1.25      13085.0  United Kingdom     False  \n"
      ]
     }
    ],
@@ -306,13 +296,14 @@
     "\n",
     "df = df.drop_duplicates() #We delete duplicatas\n",
     "\n",
-    "print(df)"
+    "print(df.head())\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
